--- a/applicationCache/index.html
+++ b/applicationCache/index.html
@@ -7,23 +7,23 @@
 <body>
 	<script src="app.js"></script>
 	<script type="text/javascript">
-		// var appCache = window.applicationCache;
+		var appCache = window.applicationCache;
 		 
-		// window.applicationCache.addEventListener('updateready', function(e) {
-		//     if (window.applicationCache.status == window.applicationCache.UPDATEREADY) {
-		//         window.applicationCache.swapCache();
-		//         if (confirm('A new version of this site is available. Load it?')) {
-		//                 window.location.reload();
-		//         }
-		//     }
-		// });
+		window.applicationCache.addEventListener('updateready', function(e) {
+		    if (window.applicationCache.status == window.applicationCache.UPDATEREADY) {
+		        window.applicationCache.swapCache();
+		        if (confirm('A new version of this site is available. Load it?')) {
+		                window.location.reload();
+		        }
+		    }
+		});
 		  
 		// appCache.update();
-		window.applicationCache.addEventListener('updateready', onUpdateReady);
-		if(window.applicationCache.status === window.applicationCache.UPDATEREADY) {
-		  window.applicationCache.swapCache();
-		  window.location.reload();
-		}
+		// window.applicationCache.addEventListener('updateready', onUpdateReady);
+		// if(window.applicationCache.status === window.applicationCache.UPDATEREADY) {
+		//   window.applicationCache.swapCache();
+		//   window.location.reload();
+		// }
 	</script>
 </body>
 </html>
