--- a/applicationCache/index.html
+++ b/applicationCache/index.html
@@ -19,7 +19,7 @@
 		    }
 		});
 		  
-		// appCache.update();
+		appCache.update();
 		// window.applicationCache.addEventListener('updateready', onUpdateReady);
 		// if(window.applicationCache.status === window.applicationCache.UPDATEREADY) {
 		//   window.applicationCache.swapCache();
