--- a/ServiceWorker/onbeforeunload.html
+++ b/ServiceWorker/onbeforeunload.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>onbeforeunload</title>
+    <title>onbeforeunloadd</title>
 </head>
 <body>
 
